# BattleManager

./: README.md  build-and-push-win.bat  build-win.bat  config.js  docker-compose.example.yml  run-localhost.bat
.github/workflows/: ci-self-hosted.yml  ci.yml
scripts/: initial-db-migrations.sql
services/graphqlService/: Dockerfile  README.md  package-lock.json  package.json
services/graphqlService/prisma/: schema.prisma
services/graphqlService/src/: constants.mjs  index.mjs  publisher.mjs  resolvers.mjs  scalarTypes.mjs  typeDefs.mjs
services/graphqlService/src/hooks/: authenticationHook.mjs
services/graphqlService/src/logic/: baseLogic.mjs  chat.mjs  game.mjs  player.mjs  role.mjs  server.mjs  user.mjs  vip.mjs
services/graphqlService/src/routes/: routes.mjs
services/graphqlService/src/utils/: authentication.mjs  errors.mjs
services/managementfrontend/: .env  Dockerfile  package-lock.json  package.json
services/managementfrontend/public/: config.js  index.html  manifest.json
services/managementfrontend/src/: App.js  index.css  index.js
services/managementfrontend/src/components/: authComponent.js  logoutComponent.js
services/managementfrontend/src/graphql/: mutations.js  queries.js  subscriptions.js
services/managementfrontend/src/molecules/: duration.js  gameMode.js  lastOnline.js  loggedIn.js  map.js  messageTime.js  ping.js  roles.js  signedIn.js  soldierNameWithTag.js  status.js  teamTable.js  timestamp.js
services/rcon-connector/: .dockerignore  Cargo.toml  Dockerfile
services/rcon-connector/src/: endpoints.rs  logging.rs  main.rs
(+26 files in other folders)
